### 14-Sep-2016 - MLS - Version 3.4
    - CTE subarrays enabled for user supported subarrays with physical overscan

### 06-Sep-2016 - MLS - Version 3.4
    - Sink pixel flagging for subarray appears correct now

### 18-July-2016 - MLS - Version 3.4
    - CTE and Sink Pixel implementation for subarrays submitted by Brechmos for review

### 28-Jan-2016 - MLS -- Version 3.3
    - Removed the call to WF3Dth for the CTE data. This is essentially useless since the DTH step has been replaced with astrodrizzle, the only function it has it to concatina
te the SPT files from the association members into a new spt file with the product/subproduct name. This is already done for the non-cte processed data, there is no difference
 between the cte and non-cte SPT files, they are only related to the RAW input file.

### 22-Jan-2016 MLS -- Version 3.3
    - Noticed I missed renaming the crc file with the call to WF3DTH and was setting the input to the crj suffix, but also needed updates to GetAsnTable to include crc filename population for subproducts and sending the correct subproduct through processing, it was always using crj
    - some code cleanup as I went
    - trailer file concatination update, but it's still not entirely correct

### 19-Jan-2016 MLS -- Version 3.3
    - Updates to fix trailer file output information. Part of the problem is the change in name of the output RAC_TMP file, the functions which create input and output trailer file naming conventions look for the dot to separate extensions so I need to change some expectations.
    - Update to check for the raw header value of PCTENSMD and update the cte parameter table accordingly (though only a value of 0 is valid right now)

### 08-Jan-2016 MLS -- Version 3.3
    - changed the name of the output rac file to rac_tmp so that archive could handle deleting it better

### 05-Nov-2015 MLS -- Version 3.3
    - removed explicit downcasts and added calloc returns in procccd

### 04-Nov-2015 MLS -- Version 3.3